fix: the x in the offline badge is sometimes low contrast, especially in dark themes
Fixes #6784

--- a/plugins/plugin-core-themes/web/scss/Mercury.scss
+++ b/plugins/plugin-core-themes/web/scss/Mercury.scss
@@ -70,6 +70,9 @@ $base0F: #a3685a;
   --color-green-rgb: var(--color-base0B-rgb);
 
   --color-table-border1: #82857b;
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base05);
 }
 
 @mixin MercuryDark {
