--- a/plugins/plugin-core-themes/web/scss/gruvbox-dark-medium.scss
+++ b/plugins/plugin-core-themes/web/scss/gruvbox-dark-medium.scss
@@ -36,4 +36,7 @@ body[kui-theme='Gruvbox'] {
   --color-latency-3: #e7d4e8;
   --color-latency-4: #af8dc3;
   --color-latency-5: #762a83;
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base00);
 }
