--- a/plugins/plugin-core-themes/web/scss/monokai.scss
+++ b/plugins/plugin-core-themes/web/scss/monokai.scss
@@ -29,4 +29,7 @@ body[kui-theme='Monokai'] {
   --color-red-rgb: var(--color-base08-rgb);
   --color-base0B-rgb: 166, 226, 46;
   --color-green-rgb: var(--color-base0B-rgb);
+
+  --color-error-cell-bg: var(--color-base0E);
+  --color-error-cell-text: var(--color-base00);
 }
